[gd_scene load_steps=64 format=2]

[ext_resource path="res://assets/sprites/player_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://src/characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/levels/Level1/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/collisions/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound/Jump1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/woosh-1.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/Hurt4.wav" type="AudioStream" id=7]
[ext_resource path="res://src/effects/ScreenShake.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/levels/Level1/ParallaxForeground.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/effects/Sparks.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/sound/steps.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sound/Hurt2.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sound/Landing.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sound/sword_hit.wav" type="AudioStream" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 6.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 7 )

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 24, 25, 27, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 37, 38 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 11, 10 ]
}

[sub_resource type="Animation" id=9]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 47, 46 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=12]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=13]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15 ]
}

[sub_resource type="Animation" id=14]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "AttackAir"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Fall"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Land"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "LandHard"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachine" id=46]
states/Attack/node = SubResource( 15 )
states/Attack/position = Vector2( 243, 335 )
states/AttackAir/node = SubResource( 16 )
states/AttackAir/position = Vector2( 549, -64 )
states/Death/node = SubResource( 17 )
states/Death/position = Vector2( -217, 269 )
states/Fall/node = SubResource( 18 )
states/Fall/position = Vector2( 253, -178 )
states/Hit/node = SubResource( 19 )
states/Hit/position = Vector2( -55, 269 )
states/Idle/node = SubResource( 20 )
states/Idle/position = Vector2( 185, 203 )
states/Jump/node = SubResource( 21 )
states/Jump/position = Vector2( 243, 19 )
states/Land/node = SubResource( 22 )
states/Land/position = Vector2( 65, 39 )
states/LandHard/node = SubResource( 23 )
states/LandHard/position = Vector2( -151, 45 )
states/Run/node = SubResource( 24 )
states/Run/position = Vector2( 442, 203 )
transitions = [ "Idle", "Run", SubResource( 25 ), "Run", "Idle", SubResource( 26 ), "Idle", "Jump", SubResource( 27 ), "Run", "Jump", SubResource( 28 ), "Jump", "Fall", SubResource( 29 ), "Fall", "Land", SubResource( 30 ), "Land", "Idle", SubResource( 31 ), "LandHard", "Idle", SubResource( 32 ), "Idle", "Attack", SubResource( 33 ), "Attack", "Idle", SubResource( 34 ), "Fall", "AttackAir", SubResource( 35 ), "AttackAir", "Fall", SubResource( 36 ), "Idle", "Hit", SubResource( 37 ), "Hit", "Idle", SubResource( 38 ), "Hit", "Death", SubResource( 39 ), "Run", "Attack", SubResource( 40 ), "Attack", "Run", SubResource( 41 ), "Jump", "AttackAir", SubResource( 42 ), "Fall", "LandHard", SubResource( 43 ), "Land", "Attack", SubResource( 44 ), "Idle", "AttackAir", SubResource( 45 ) ]
start_node = "Idle"
end_node = "Death"
graph_offset = Vector2( -379, -265 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=47]

[sub_resource type="Animation" id=48]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.215686 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=49]
length = 0.5

[node name="Player" type="KinematicBody2D"]
z_index = 100
collision_layer = 2
collision_mask = 17
script = ExtResource( 2 )
max_jumps = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 23, 1 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3, -8 )
texture = ExtResource( 1 )
vframes = 51
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/AttackAir = SubResource( 5 )
anims/Dash = SubResource( 6 )
anims/Death = SubResource( 7 )
anims/Fall = SubResource( 8 )
anims/Hit = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/Jump = SubResource( 11 )
anims/Land = SubResource( 12 )
anims/LandHard = SubResource( 13 )
anims/Run = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 46 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 47 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="ParallaxBackground" parent="Camera2D" instance=ExtResource( 3 )]

[node name="ParallaxForeground" parent="Camera2D" instance=ExtResource( 9 )]
layer = 100

[node name="Effects" type="Node" parent="Camera2D"]

[node name="ScreenShake" parent="Camera2D/Effects" instance=ExtResource( 8 )]

[node name="Timers" type="Node" parent="."]

[node name="ResetTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="Timers"]
wait_time = 1.5
one_shot = true

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="ComboTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="Attack" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 6 )
bus = "Sounds"

[node name="AttackHit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 14 )
bus = "Sounds"

[node name="Hit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 12 )
bus = "Sounds"

[node name="Steps" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -15.0
bus = "Sounds"

[node name="Death" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )
bus = "Sounds"

[node name="Land" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 13 )
bus = "Sounds"

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Invincible = SubResource( 48 )
anims/NoEffects = SubResource( 49 )

[node name="Sparks" parent="." instance=ExtResource( 10 )]
position = Vector2( 22.8527, 1.07723 )

[node name="InfoPosition2D" type="Position2D" parent="."]
position = Vector2( 0, -12.1124 )
[connection signal="body_shape_entered" from="HitBox" to="." method="_on_HitBox_body_shape_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timers/ResetTimer" to="." method="_on_ResetTimer_timeout"]
[connection signal="timeout" from="Timers/InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="Timers/ComboTimer" to="." method="_on_ComboTimer_timeout"]

[editable path="HurtBox"]
